vish-crossy-roads/crossy_roads/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.4.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/richtextfx-fat-0.9.0.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/javassist-3.18.0.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/commons-vfs2-2.0.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/wj/s31fx6t14k18r2z187xhc4_w0000gn/T/AppTranslocation/B87FAF9F-4703-41AC-A813-9582A71C3992/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/Users/vishu/SJSU/CMPE202/CrossyRoad Game/fa18-202-mavericks/crossy_roads
-d
/Users/vishu/SJSU/CMPE202/CrossyRoad Game/fa18-202-mavericks/crossy_roads/doc
-encoding
UTF-8
-charset
UTF-8
/Users/vishu/SJSU/CMPE202/CrossyRoad Game/fa18-202-mavericks/crossy_roads/Level1Strategy.java
<---- end of javadoc command ---->
Loading source file /Users/vishu/SJSU/CMPE202/CrossyRoad Game/fa18-202-mavericks/crossy_roads/Level1Strategy.java...
/Users/vishu/SJSU/CMPE202/CrossyRoad Game/fa18-202-mavericks/crossy_roads/Level1Strategy.java:29: error: ';' expected
        terrains.addChild( road_t );
                ^
javadoc: error - java.lang.OutOfMemoryError: Please increase memory.
For example, on the JDK Classic or HotSpot VMs, add the option -J-Xmx
such as -J-Xmx32m.
2 errors
